# NotiFlow

./: .gitignore  README.md  pyproject.toml
nt_backend/: WorkFlow_n8n_backup.json
nt_backend/app/: back-end.md  main.py
nt_backend/app/db/: db.md  supabase.py
nt_backend/app/repositories/: auth_repository.py  group_repository.py  me_repository.py  notification_repository.py  signin_repository.py  signup_repository.py  user_repository.py
nt_backend/app/routes/: auth.py  groups.py  me.py  notifications.py  signin.py  signup.py  users.py
nt_backend/app/services/: auth_service.py  group_service.py  me_service.py  notification_service.py  signin_service.py  signup_service.py  user_service.py
nt_backend/app/utils/: get_token.py  webhook.py
nt_backend/db/: supabase.py
nt_backend/db/supabase_functions/: functions.py
nt_backend/fastapi/: dev.py
nt_frontend/: README.md  index.html  package-lock.json  package.json
nt_frontend/src/: App.jsx  fonts.js  index.css  main.jsx
nt_frontend/src/components/: Modal.jsx  Navbar.jsx  NotificationForm.jsx  PageTransition.jsx  Toast.jsx
nt_frontend/src/pages/: Dashboard.jsx  Notifications.jsx  Settings.jsx
nt_frontend/src/services/: api.js
